wired in chip temperature and voltage sensor readings
