# main/http_server/axe-os/src/app/services/system.service.ts
@@ -58,6 +58,7 @@ export class SystemApiService {
         current: 2237.5,
         temp: 60,
         temp2: 60,
+        asicTemps: [60, 59.5, 61, 60.5],
         vrTemp: 45,
         maxPower: 25,
         nominalVoltage: 5,
@@ -77,6 +78,7 @@ export class SystemApiService {
         maxAllocHeap: 90000,
         coreVoltage: 1200,
         coreVoltageActual: 1200,
+        asicVoltages: [1101, 1098, 1104, 1100],
         hostname: "Bitaxe",
         macAddr: "2C:54:91:88:C9:E3",
         ssid: "default",
